# some_flask

./: .gitignore  Makefile  example.py  pyproject.toml
templates/users/: delete.html  edit.html  index.html  login.html  new.html  show.html
