[tool.poetry]
name = "webtest"
version = "0.1.0"
description = ""
authors = ["Ilya Bagrov <ilya.b.only@gmail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
